import java.text.SimpleDateFormat

plugins {
    id 'fml-loom' version '0.1.local'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = "[MITF重生]" + project.archives_base_name
//    archivesName = "[MITF重生]MITF-Reborn"
}

repositories {
    mavenLocal()
    maven {
        name = "Spongepowered"
        url = "https://repo.spongepowered.org/repository/maven-public/"
    }
}

loom {
    accessWidenerPath = file("src/main/resources/MITEIsTooFalse.accesswidener")
    mergedMinecraftJar()
    setFML(new File("${lib_dir}/${fml_file_name}${fml_version}.jar"))
    mods {
        "MITE-ITF-Reborn" {
            sourceSet sourceSets.main
        }
    }

}

runClient {
    args("--username", "De6ris", "--session", "a.a.a.a", "--width", 854, "--height", 480)
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.fmlMCPMappings()
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    implementation files(loom.getFML().toPath())

    // these are necessary for running
    implementation(files("${lib_dir}/ManyLib.jar"))
    implementation files("${lib_dir}/RustedIronCore.jar")
    implementation files("${lib_dir}/RustedIronCore-sources.jar")

    // compile needed, runtime not needed
    compileOnly(files("${lib_dir}/MITE-ITE.jar"))
    compileOnly(files("${lib_dir}/Baubles.jar"))

    // some useful mods I use
    implementation files("${lib_dir}/ModernMite.jar")
    implementation files("${lib_dir}/ommc.jar")
//    implementation files("${lib_dir}/MITEDevHackMod-FML3.0.0.jar")
    implementation files("${lib_dir}/Neodymium.jar")
    implementation files("${lib_dir}/FPSPlus.jar")
    implementation files("${lib_dir}/Hwite.jar")
    implementation files("${lib_dir}/MixinConflictHelper.jar")
    implementation files("${lib_dir}/EMI.jar")
    implementation files("${lib_dir}/ModMenu.jar")
    implementation files("${lib_dir}/PinIn-Lib.jar")
    implementation files("${lib_dir}/ExtraGui.jar")
}

processResources {
    inputs.property "version", project.version

    filesMatching("fml.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
//    options.compilerArgs += ["-Dmod_version=${mod_version}"]
}

java {
    withSourcesJar()

    version += "-mc" + project.minecraft_version + "-" + new SimpleDateFormat("yyyyMMdd").format(new Date())
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

jar {

}

// configure the maven publication
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }

    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}